@@ -80,9 +80,10 @@ CONFIG = {
     # number. 1 means normal speed, > 1 meens higher speed of game objects.
     'game speed' => 1,
 
-    # Seconds to sleep in every frame (set cca 0.010 if freeVikings
-    # have fps higher then 20 and vikings move suspiciously slowly)
-    'frame delay' => 0,
+    # Seconds to sleep in every frame (in order to limit frame rate)
+    # can be :auto, :off or number of seconds (e.g. 0.010).
+    # :auto should work well for everyone.
+    'frame delay' => :auto,
 
     # Password you want to start with. Normally you don't specify it 
     # in a configuration file but in menu or on command line
