@@ -36,7 +36,13 @@ CONFIG = {
     'show level password' => [true, false],
     'viking switch' => [:warp, :smooth],
     'game speed' => Numeric,
-    'frame delay' => Numeric,
+    'frame delay' => Proc.new {|val|
+      if val == :auto || val == :off || val.is_a?(Numeric) then
+        true
+      else
+        false
+      end
+    },
     'start password' => String
   },
   'Controls' => {
